[package]
name = "k2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
futures = "0.3"
parking_lot = "0.12"
ratatui = "0.27"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
socket2 = "0.5"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
walkdir = "2"
bincode = "1.3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
once_cell = "1"
indexmap = "=2.11.0"
